--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/TestNewFeaturesProject">
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/TestNewFeaturesProject">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
